--- a/npcs/Eldaren_Brightfoot.yaml
+++ b/npcs/Eldaren_Brightfoot.yaml
@@ -216,7 +216,6 @@ npc:
     #
     occupation:
     - Mime, Comedian, Thespian
-    
 
     #
     # D & D classes (case insensitive):
@@ -298,7 +297,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -315,7 +313,6 @@ npc:
     - Halfling
     - Gnomish
     - Elvish
-
 
     #
     # Factions:
@@ -344,7 +341,7 @@ npc:
     # Optional.  0 or more.
     #
     adjectives:
-    - Charming    
+    - Charming
 
   improv:
 
@@ -386,7 +383,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Everything comes together in a form or shape; a pattern. Everything has a pattern"; "Stay gleeful, glum chum. The world needs joy."; "Did you see my performance of Lord Neverember in 'The Calling of Broken Arrows'? I think everyone who's anyone has seen that."
+    expressions:  
+    - "Everything comes together in a form or shape; a pattern. Everything has a pattern"
+    - "Stay gleeful, glum chum. The world needs joy."
+    - "Did you see my performance of Lord Neverember in 'The Calling of Broken Arrows'? I think everyone who's anyone has seen that."
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -410,7 +410,7 @@ npc:
     #
     motivations: |
       Desires renown as the finest actor in the town/city/region. Hopes his performances invoke proclivities towards socialist political beliefs and away from monarchs and the aristocracy.
-      
+
     #
     # Passions:
     #
@@ -419,7 +419,7 @@ npc:
     #
     passions: |
       Acting, miming, singing, comedy; The greater good, to a fault; Socialism;
-      
+
     #
     # Vulnerabilities:
     #
@@ -428,7 +428,7 @@ npc:
     #
     vulnerabilities: |
       N/A
-      
+
     #
     # Secrets:
     #
@@ -437,8 +437,7 @@ npc:
     #
     secrets: | 
       N/A
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -463,40 +462,37 @@ npc:
   #
   specialties:
     skills:
-   - - Halfling Abilities:
-       - Lucky: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll           
-       - Brave: Has advantage on Saving Throws against being Frightened 
-       - Halfling Nimbleness: can move through the space of any creature that is of a size larger than her
+    - Halfling Abilities:
+      - Lucky: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll
+        Brave: Has advantage on Saving Throws against being Frightened
+        Halfling Nimbleness: can move through the space of any creature that is of a size larger than her
+      Lightfoot Abilities:
+      - Naturally Stealthy: You can attempt to hide even when you are obscured only by a creature that is at least one size larger than you
+      Bard Abilities:
+      - Bard Spellcasting:
+        - Description: Spell DC 16
+          Cantrip: Mage Hand, Vicious Mockery, Minor Illusion, Dancing Lights
+          1st Level: Charm Person, Faerie Fire, Tasha's Hideous Laughter, Disguise Self
+          2nd Level: Enthrall, Heat Metal, Invisibility
+          3rd Level: Hypnotic Pattern, Tongues, Major Image
+          4th Level: Compulsion, Polymorph, Greater Invisibility
+          5th Level: Modify Memory, Legend Lore
+        Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
+                            10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
+        Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
+        Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
+        Font of Inspiration: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
+        Countercharm: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against
+                      being Frightened or Charmed
+        Expertise: gets double proficiency bonus in Performance and Persuasion
+        Magical Secrets: Can cast Magic Missle and Fireball
+      College of Lore Abilities:
+      - Cutting Words: you learn how to use your wit to distract, confuse, and otherwise sap the confidence and competence of others. When a creature that you can see within 60 feet of you makes an Attack roll, an ability
+                       check, or a damage roll, you can use your Reaction to expend one of your uses of Bardic Inspiration, rolling a Bardic Inspiration die and subtracting the number rolled from the creature’s roll. You can
+                       choose to use this feature after the creature makes its roll, but before the GM determines whether the Attack roll or ability check succeeds or fails, or before the creature deals its damage. The creature
+                       is immune if it can’t hear you or if it’s immune to being Charmed 
+        Additional Magic Secrets: Can cast Detect Thoughts and Dominate Person
 
-   - - Lightfoot Abilities:
-       - Naturally Stealthy: You can attempt to hide even when you are obscured only by a creature that is at least one size larger than you
-                       
-   - - Bard Abilities:
-       - Bard Spellcasting: Spell DC 16
-           Cantrip: Mage Hand, Vicious Mockery, Minor Illusion, Dancing Lights
-           1st Level: Charm Person, Faerie Fire, Tasha's Hideous Laughter, Disguise Self 
-           2nd Level: Enthrall, Heat Metal, Invisibility
-           3rd Level: Hypnotic Pattern, Tongues, Major Image
-           4th Level: Compulsion, Polymorph, Greater Invisibility
-           5th Level: Modify Memory, Legend Lore
-       - Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
-                             10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
-       - Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
-       - Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
-       - Font of Inspiration: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
-       - Countercharm: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
-                       being Frightened or Charmed
-       - Expertise: gets double proficiency bonus in Performance and Persuasion
-       - Magical Secrets: Can cast Magic Missle and Fireball
- 
-       
-   - - College of Lore Abilities:
-       - Cutting Words: you learn how to use your wit to distract, confuse, and otherwise sap the confidence and competence of others. When a creature that you can see within 60 feet of you makes an Attack roll, an ability
-                        check, or a damage roll, you can use your Reaction to expend one of your uses of Bardic Inspiration, rolling a Bardic Inspiration die and subtracting the number rolled from the creature’s roll. You can
-                        choose to use this feature after the creature makes its roll, but before the GM determines whether the Attack roll or ability check succeeds or fails, or before the creature deals its damage. The creature
-                        is immune if it can’t hear you or if it’s immune to being Charmed 
-       - Additional Magic Secrets: Can cast Detect Thoughts and Dominate Person
-       
     special-abilities:
     - Proficiencies: Insight, Performance, Persuasion   
     attacks: |
@@ -522,7 +518,6 @@ npc:
       celebrity with passers-by remarking, "I saw your performance of Gonidorin in 'the Leaves will Fall as they May!" or something equally astounded. Only the erudite recognize that many of his performances have a hidden
       message promoting freeing the commoners from the clutches of the royalty.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -534,32 +529,3 @@ npc:
     personality: |
       Very handsome specimen; Polished amber curls fall to his shoulders or gets tied in a topknot (unless he's performing); Fashion savvy - wears bright colors contrasted with deep hues; Loves patterns - in clothing and
       otherwise
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
