--- a/npcs/dharja.yaml
+++ b/npcs/dharja.yaml
@@ -298,7 +298,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -314,7 +313,6 @@ npc:
     - Human
     - goblin
     - dwarvish.
-
 
     #
     # Factions:
@@ -383,7 +381,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "I don't know as if I can answer that"; "What would the Vivian Girls think?"; "We should start a society together."
+    expressions:  
+    - "I don't know as if I can answer that"
+    - "What would the Vivian Girls think?"
+    - "We should start a society together."
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -425,7 +426,7 @@ npc:
     #
     vulnerabilities: |
       Thoroughly repressed; scarred by early life in the Orphanage for Godless Goblinoids; fond, but terrified, of children
-      
+
     #
     # Secrets:
     #
@@ -434,8 +435,7 @@ npc:
     #
     secrets: | 
       N/A
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -460,12 +460,12 @@ npc:
   #
   specialties:
     skills:
-  - - Goblin Abilities:
-      - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light           
-      - Fury of the Small: When you damage a creature with an attack or a spell and the creature's size is larger than yours, you can cause the attack or spell to deal extra damage to the creature. The extra damage equals 
+    - Goblin Abilities:
+      - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
+        Fury of the Small: When you damage a creature with an attack or a spell and the creature's size is larger than yours, you can cause the attack or spell to deal extra damage to the creature. The extra damage equals
                            your level.
-      - Nimble Escape: You can take the Disengage or Hide action as a bonus action on each of your turns.                           
-       
+        Nimble Escape: You can take the Disengage or Hide action as a bonus action on each of your turns.
+
     special-abilities:
     - Proficiencies: Mason's Tools, Master Mason    
     attacks: |
@@ -475,7 +475,7 @@ npc:
     special-equipment:
     - Twelve-thousand page tome he is writing and drawing with the aid of pictures
     - some lewd pictures cut from other manuscripts.
-                                                                   
+
   profile:
 
     #
@@ -488,10 +488,9 @@ npc:
     background-story: |
       The town of Hovering Heights [any small settlement], located in the rim of the Pallisade Mountains [Any small to medium Mountain Range] isn't renown for much besides some breads and fruit farming. The peoples of Hovering 
       Heights all long for some kind of excitement and Dharja is no exception. Raised in a very humble household of goblinoids repressed into commoners, Dharja learned the skills of his parents, who were general caretakers
-      contracted by local merchants and innkeepers. He longed for adventure and to unleash what he believed to be a vast creative potential within him, but has never had the chance. Instead, he's largely resigned himself to 
+      contracted by local merchants and innkeepers. He longed for adventure and to unleash what he believed to be a vast creative potential within him, but has never had the chance. Instead, he's largely resigned himself to
       shuffling about with a mop through Lady Sybil's hospital for the infirm.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -502,32 +501,4 @@ npc:
     #
     personality: |
       Shy, awkward, fearful.  Brimming with suppressed creativity.  Moustache, liver spots in cheeks, yellow eyes.
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+  
